tweaked width of filter search box to prevent wrapping

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -575,7 +575,7 @@ ul#filter {
       height: 18px;
       margin: 0;
       padding: 5px 6px 5px 10px;
-      width: 195px;
+      width: 185px;
     }
     img {
       display: none;
